--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,3 +4,9 @@
     justify-content: @justify;
     align-items: @align;
 }
+
+.button(@button-bg, @padding, @borderRadius) {
+    background-color: @button-bg;
+    padding: @padding;
+    border-radius: @borderRadius;
+}
